# CSVMedic

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  build.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_read.py
docs/: api-reference.md  faq.md  how-it-works.md  index.md  quickstart.md
src/csvmedic/: __init__.py  _version.py  accessor.py  batch.py  confidence.py  diagnosis.py  diff.py  exceptions.py  models.py  reader.py  schema.py
src/csvmedic/detectors/: __init__.py  booleans.py  dates.py  dialect.py  encoding.py  numbers.py  strings.py
src/csvmedic/transformers/: __init__.py  boolean_transformer.py  date_transformer.py  number_transformer.py  string_transformer.py
tests/: __init__.py  conftest.py  test_batch.py  test_boolean_detector.py  test_confidence.py  test_date_detector.py  test_diagnosis.py  test_dialect_detector.py  test_diff.py  test_encoding_detector.py  test_number_detector.py  test_reader.py  test_schema.py  test_string_detector.py  test_transformers.py
tests/fixtures/: european_export.csv  european_numbers.csv  french_dates.csv  german_semicolon.csv  huge_header.csv  japanese_shift_jis.csv  leading_zeros.csv  malformed_quotes.csv  mixed_dates_ambiguous.csv  single_column.csv  us_standard.csv
