[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csvmedic"
version = "0.1.3"
description = "Automatic locale-aware CSV and Excel reader with encoding, delimiter, date format, and number locale detection."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "csvmedic contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5.0",
    "charset-normalizer>=3.0.0",
]

[project.optional-dependencies]
fast = ["clevercsv>=0.8.0"]
excel = ["openpyxl>=3.1.0"]
all = ["clevercsv>=0.8.0", "openpyxl>=3.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.8",
    "pandas-stubs>=2.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/Phantasm0009/CSVMedic"
Documentation = "https://csvmedic.readthedocs.io"
Repository = "https://github.com/Phantasm0009/CSVMedic"

[tool.hatch.build.targets.wheel]
packages = ["src/csvmedic"]

[tool.hatch.build.targets.sdist]
include = ["src/csvmedic"]

[tool.ruff]
line-length = 99
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]
